fix(audit): make every deletion attempt leave evidence naming the attempt
P6-259/P6-260: Set.copyOf/List.copyOf throw on a null element, so a malformed
(e.g. deserialized) DeletionContext or authorizer list failed at construction —
before evaluate() could reject it with an immutable deletion-evidence event,
which is the class's whole contract. The copies are now null-tolerant
(unmodifiable LinkedHashSet/ArrayList) and a null authorizer element is judged as
an unauthorized attempt instead of throwing NPE from contains(null).

P6-646/P6-647/P6-648: every rejection branch passed null, null for the
authorizers, so the forensic trail could not show who attempted a deletion —
worst of all for REJECTED_UNAUTHORIZED_OPERATOR, where the intruder's identity is
the point. Rejections now record the attempted operator (the validated single
operator for policy/hold rejections, the intruder for an unauthorized one, the
first two for an over-authorized pair).

P6-261: classify() compared stored hashes only, so a record whose fields were
altered while its stored eventId/contentHash were preserved classified as
DUPLICATE (mutation of immutable evidence). It now recomputes
canonicalHash(incoming.canonical()) and returns VIOLATION on mismatch.

P6-651: canonicalForm concatenated unescaped values as key=value lines, so a
newline in scope forged an extra line and two logically different requests shared
one canonical string, one content hash and one event id (test:
"r1" + "a\nscope=b" collided with "r1\nscope=a" + "b" before this change). Values
are now escaped (backslash, \n, \r); null still renders empty. Because the preimage
changed, the form is versioned: deletion-evidence-v1 -> deletion-evidence-v2. No
stored corpus needed migrating: the class has no producer yet (foundation.md:
per-day manifests still need the EOD controller), and the event record itself
carries no format marker, so a v1 hash can only be recognised by its own bytes.

P6-650: the finding asked for a timestamp-free ev